# brick-xlsx-validator

./: README.md  example.py  pyproject.toml  testing_validation.py
brick_xlsx_validator/: __init__.py  helpers.py  relationships.py  validate.py  validators.py
brick_xlsx_validator/ontologies/Switch/1.0/: Brick-SwitchExtension.ttl
brick_xlsx_validator/ontologies/Switch/1.1/: Brick-SwitchExtension.ttl
brick_xlsx_validator/ontologies/Switch/1.1.3/: Brick-SwitchExtension.ttl
brick_xlsx_validator/ontologies/Switch/1.1.4/: Brick-SwitchExtension.ttl
brick_xlsx_validator/ontologies/Switch/1.1.7/: Brick-SwitchExtension.ttl
