[tool.poetry]
name = "brick-xlsx-validator"
version = "0.1.0"
description = "Validates input excel files"
authors = ["wcrd <11898748+wcrd@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.0"
openpyxl = "^3.0.7"
rdflib = "^6.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
